5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4444/executions/1630_2919.log
== TEST (2019-04-02 16:16:22) 
-- CODE:
var1=float(input("h1:  "))
var2=float(input('h1:  '))
var3=float(input('h3:  '))
var4=float(input('h4:  '))
-- OUTPUT:
7.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:16:42) 
-- CODE:
var1=float(input("h1:  "))
var2=float(input('h1:  '))
var3=float(input('h3:  '))
var4=float(input('h4:  '))
-- OUTPUT:
7.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:17:49) 
-- CODE:
var1=float(input("h1:  "))
var2=float(input('h1:  '))
var3=float(input('h3:  '))
var4=float(input('h4:  '))
print(var1 + var2 + var3 +var4)/4

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(var1 + var2 + var3 +var4)/4
TypeError: unsupported operand type(s) for /: 'NoneType' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:18:17) 
-- CODE:
var1=float(input("h1:  "))
var2=float(input('h1:  '))
var3=float(input('h3:  '))
var4=float(input('h4:  '))
print(int((var1 + var2 + var3 +var4)/4)

-- ERROR:
File "XXXX", line 6
    
                                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:18:27) 
-- CODE:
var1=float(input("h1:  "))
var2=float(input('h1:  '))
var3=float(input('h3:  '))
var4=float(input('h4:  '))
print(int((var1 + var2 + var3 +var4)/4))

-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:36:14) 
-- CODE:
var1=float(input("h1:  "))
var2=float(input('h1:  '))
var3=float(input('h3:  '))
var4=float(input('h4:  '))
var5=var1+var2+var3+var4
var6=var5/4

print(round(var6,2))

-- OUTPUT:
1.68
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:36:27) 
-- CODE:
var1=float(input("h1:  "))
var2=float(input('h1:  '))
var3=float(input('h3:  '))
var4=float(input('h4:  '))
var5=var1+var2+var3+var4
var6=var5/4

print(round(var6,2))

-- OUTPUT:
1.68
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:36:39) 
-- CODE:
var1=float(input("h1:  "))
var2=float(input('h1:  '))
var3=float(input('h3:  '))
var4=float(input('h4:  '))
var5=var1+var2+var3+var4
var6=var5/4

print(round(var6,2))

-- OUTPUT:
1.68
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:36:50) 
-- CODE:
var1=float(input("h1:  "))
var2=float(input('h1:  '))
var3=float(input('h3:  '))
var4=float(input('h4:  '))
var5=var1+var2+var3+var4
var6=var5/4

print(round(var6,2))

-- EXECUTION TIME:
0.185627
-- TEST CASE 1:
---- input:
1.78
1.56
1.62
1.74
---- correct output:
1.68
---- user output:
1.68
-- TEST CASE 2:
---- input:
1.52
1.53
1.51
1.8
---- correct output:
1.59
---- user output:
1.59
-- TEST CASE 3:
---- input:
1.85
1.9
1.72
1.86
---- correct output:
1.83
---- user output:
1.83
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
